# patchscope

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: api.md  architecture.md  extending.md  security.md
docs/adoption/: 2026-07-18-open-source-readiness.md
docs/releases/: v0.1.0.md  v0.1.1.md
docs/validation/: 2026-07-18-live-integrations.md
examples/: insecure_checkout.py
src/patchscope/: __init__.py  __main__.py  cli.py  config.py  container.py  database.py  domain.py  errors.py  exports.py  github.py  intake.py  languages.py  parsing.py  refactor.py  repository.py  schemas.py  service.py  streamlit_app.py
src/patchscope/agent/: __init__.py  model.py  prompts.py  state.py  workflow.py
src/patchscope/analyzers/: __init__.py  base.py  heuristics.py  mypy.py  process.py  ruff.py  runner.py  semgrep.py  utils.py
src/patchscope/api/: __init__.py  app.py  dependencies.py  routes.py
src/patchscope/data/: __init__.py  insecure_checkout.py.txt
src/patchscope/ui/: __init__.py  client.py  components.py  theme.py  views.py
tests/api/: __init__.py  conftest.py  test_reviews.py
tests/contract/: test_compose.py  test_project.py
tests/e2e/: __init__.py  test_workbench.py
tests/integration/: test_repository.py
tests/live/: __init__.py  conftest.py  test_integrations.py
tests/ui/: conftest.py  test_app.py  test_client.py  test_components.py
tests/unit/: test_cli.py  test_config.py  test_container.py  test_domain.py  test_exports.py  test_github.py  test_intake.py  test_languages.py  test_parsing.py  test_refactor.py  test_schemas.py  test_service.py
tests/unit/agent/: test_model.py  test_workflow.py
tests/unit/analyzers/: test_adapter_degradation.py  test_adapters.py  test_heuristics.py  test_process.py  test_runner.py  test_utils.py
