[build-system]
requires = ["hatchling>=1.28,<2"]
build-backend = "hatchling.build"

[project]
name = "patchscope"
version = "0.1.0"
description = "Local-first, evidence-backed code review and safe refactor workbench"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [{ name = "PatchScope Contributors" }]
keywords = ["code-review", "static-analysis", "fastapi", "langgraph", "tree-sitter"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "anyio>=4.12,<5",
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "langchain==1.3.14",
  "langchain-openai==1.3.5",
  "langgraph==1.2.9",
  "mypy==1.20.2",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "python-multipart==0.0.32",
  "rich>=14.3,<15",
  "ruff==0.15.22",
  "sqlalchemy>=2.0.40,<2.1",
  "streamlit==1.59.2",
  "tree-sitter-language-pack==0.13.0",
  "typer>=0.24,<1",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
e2e = [
  "playwright>=1.55,<2",
  "pytest-playwright>=0.7,<1",
]
postgres = ["psycopg[binary]>=3.2,<4"]

[project.scripts]
patchscope = "patchscope.cli:app"

[dependency-groups]
dev = [
  "bandit>=1.8,<2",
  "build>=1.3,<2",
  "httpx2==2.7.0",
  "pip-audit>=2.9,<3",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov>=7,<8",
  "pytest-socket>=0.7,<1",
  "respx>=0.22,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/patchscope"]

[tool.hatch.build.targets.wheel.force-include]
".streamlit/config.toml" = "patchscope/.streamlit/config.toml"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/docs/api.md",
  "/docs/adoption",
  "/docs/architecture.md",
  "/docs/assets",
  "/docs/extending.md",
  "/docs/security.md",
  "/.dockerignore",
  "/.env.example",
  "/.python-version",
  "/.streamlit",
  "/README.md",
  "/CODE_OF_CONDUCT.md",
  "/CONTRIBUTING.md",
  "/SECURITY.md",
  "/SUPPORT.md",
  "/LICENSE",
  "/Makefile",
  "/compose.yaml",
  "/Dockerfile",
  "/uv.lock",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers -m 'not e2e and not live'"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: exercises durable persistence or multiple local components",
  "live: makes explicitly opted-in provider or GitHub calls",
  "ui: exercises the Streamlit presentation layer",
  "e2e: exercises running services through Playwright",
]

[tool.coverage.run]
branch = true
source = ["patchscope"]
omit = ["src/patchscope/streamlit_app.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S108"]
"scripts/**/*.py" = ["S603"]
"src/patchscope/cli.py" = ["S603"]
"examples/**/*.py" = ["B006", "E722", "S110", "S307", "S324", "S608", "SIM105"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
packages = ["patchscope"]

[[tool.mypy.overrides]]
module = ["streamlit.*", "tree_sitter_language_pack.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
